kube-gitea/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
  labels:
    app: gitea
spec:
  ports:
    - name: gitea-ssh
      port: 2222
      targetPort: 2222
      nodePort: 6666
  selector:
    app: gitea
  type: NodePort
