kube-gitea/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-web
  namespace: gitea
  labels:
    name: gitea
spec:
  ports:
    - name: gitea-web
      port: 6443 
      targetPort: 6443
      nodePort: 443
  selector:
    app: gitea
  type: NodePort
