kube-gitea/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - yourdomain.com
    secretName: ingress-secrets
  rules:
  - host: yourdomain.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea-web
          servicePort: 6443 
      - backend:
          serviceName: gitea-ssh
          servicePort: 2222
      - backend:
          serviceName: gitea-letsencrypt
          servicePort: 8080
